<resources>
    <string name="app_name">Work sign</string>
    <string name="tv_usuario">Usuario:</string>
    <string name="txt_usuario">Usuario</string>
    <string name="tv_password">Password:</string>
    <string name="txt_password">Password</string>
    <string name="bt_validar">ACCEDER</string>
    <string name="bt_registrar">CREAR CUENTA</string>
    <string name="created">Created_by_Amritpal_Singh</string>
    <string name="txt_bienvenida">Bienvenido/a</string>
    <string name="bt_cerrar">CERRAR</string>
    //activity_registrar
    <string name="txt_nom_completo">Nombre Completo</string>
    <string name="tv_nom_completo">Nombre Completo:</string>
    <string name="txt_empresa">Empresa</string>
    <string name="tv_empresa">Empresa:</string>
    <string name="txt_new_usuario">Usuario</string>
    <string name="tv_new_usuario">Usuario:</string>
    <string name="txt_password_confirm">Confirmar password</string>
    <string name="tv_password_confirm">Confirmar password:</string>
    <string name="txt_puesto_trabajo">Puesto trabajo</string>
    <string name="tv_puesto_trabajo">Puesto trabajo:</string>

    //activity fichar
    <string name="bt_in">IN</string>
    <string name="bt_out">OUT</string>
    <string name="tv_resgistro">Registro</string>
    <string name="bt_registro_diario">Registro diario</string>
    <string name="bt_registro_total">Registro total</string>

</resources>